@@ -190,7 +190,8 @@ Chronological list of authors
   - Aditi Tripathi
   - Sukeerti T
   - Robot Jelly
-
+  - Mark Verma
+  
 
 External code
 -------------
